- Fix slide image alignment

--- a/public/styles/FileUpload.sass
+++ b/public/styles/FileUpload.sass
@@ -176,7 +176,9 @@
 	.imt-image-placeholder
 
 		width: 100%
-		max-width: 900px
+		max-width: 1000px
+		margin-left: auto
+		margin-right: auto
 		// height: 100%
 		position: relative
 		height: 0
